--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <section class="section-1">
             <div class="menu-items-column">
                 <div class="menu-item-card menu-item-card-1">
-                    <img src="images/pasta.png" class="menu-item-image-1" alt="Cheeseburger">
-
+                    <img src="pasta.png" class="menu-item-image-1" alt="Cheeseburge
                     <div class="menu-item-type-1">
                         <div class="menu-item-details menu-item-details-1">
                             <h3>Pasta</h3>
@@ -65,7 +64,7 @@
                 </div>
 
                 <div class="menu-item-card menu-item-card-1">
-                    <img src="images/chicken-nuggets.png" class="menu-item-image-1" alt="Chicken nuggets">
+                    <img src="chicken-nuggets.png" class="menu-item-image-1" alt="Chicken nuggets">
 
                     <div class="menu-item-type-1">
                         <div class="menu-item-details menu-item-details-1">
@@ -111,7 +110,7 @@
             </div>
 
             <div class="pasta-image">
-                <img src="images/pasta.png" alt="Pasta">
+                <img src="pasta.png" alt="Pasta">
                 <div class="discount-tag">
                     <h3>25% off</h3>
                 </div>
@@ -137,7 +136,7 @@
 
                     <div class="menu-items-column">
                         <div class="menu-item-card menu-item-card-2">
-                            <img src="images/pasta-spaghetti.png" class="menu-item-image-2" alt="Pasta spaghetti">
+                            <img src="pasta-spaghetti.png" class="menu-item-image-2" alt="Pasta spaghetti">
 
                             <div class="menu-item-type-2">
                                 <div class="menu-item-details menu-item-details-2">
@@ -153,7 +152,7 @@
                         </div>
 
                         <div class="menu-item-card menu-item-card-2">
-                            <img src="images/chicken-nuggets.png" class="menu-item-image-2" alt="Chicken nuggets">
+                            <img src="chicken-nuggets.png" class="menu-item-image-2" alt="Chicken nuggets">
 
                             <div class="menu-item-type-2">
                                 <div class="menu-item-details menu-item-details-2">
@@ -178,7 +177,7 @@
                             </div>
                         </div>
 
-                        <img src="images/vegetable-eggs.png" class="menu-item-image-horizontal" alt="Coffee">
+                        <img src="vegetable-eggs.png" class="menu-item-image-horizontal" alt="Coffee">
                     </div>
 
                     <div class="navigation-buttons">
@@ -196,7 +195,7 @@
                         <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+PGcgZGF0YS1uYW1lPSIwMSBhbGlnbiBjZW50ZXIiPjxjaXJjbGUgY3g9IjEyIiBjeT0iMiIgcj0iMiIvPjxjaXJjbGUgY3g9IjEyIiBjeT0iMTIiIHI9IjIiLz48Y2lyY2xlIGN4PSIxMiIgY3k9IjIyIiByPSIyIi8+PC9nPjwvc3ZnPg==" alt="More options button">
                     </div>
 
-                    <img src="images/vegetable-eggs.png" class="menu-item-image-vertical" alt="Vegetable eggs">
+                    <img src="vegetable-eggs.png" class="menu-item-image-vertical" alt="Vegetable eggs">
 
                     <div class="menu-item-type-vertical">
                         <div class="menu-item-details menu-item-details-vertical">
