--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="header-image">
-                <img src="images/vegetable-eggs.png" alt="Vegetable eggs">
+                <img src="vegetable-eggs.png" alt="Vegetable eggs">
             </div>
         </div>
     </header>
