--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
                 </div>
 
                 <div class="app-download-links">
-                    <a href="https://zakariyaq313.github.io/error-404/" target="_blank" rel="noopener"><img src="images/app-store.svg" class="download-button" alt="App Store"></a>
-                    <a href="https://zakariyaq313.github.io/error-404/" target="_blank" rel="noopener"><img src="images/play-store.svg" class="download-button" alt="Play Store"></a>
+                    <a href="https://zakariyaq313.github.io/error-404/" target="_blank" rel="noopener"><img src="app-store.svg" class="download-button" alt="App Store"></a>
+                    <a href="https://zakariyaq313.github.io/error-404/" target="_blank" rel="noopener"><img src="play-store.svg" class="download-button" alt="Play Store"></a>
                 </div>
             </div>
         </section>
